# academic-investigator

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
fixtures/: author_response.json  work_detail_response.json  works_response.json
skills/academic-investigator/: SKILL-conference.md  SKILL-setup.md  SKILL.md
src/academic_investigator/: __init__.py  cli.py
src/academic_investigator/core/: __init__.py  impact_tiers.py  openalex.py  person_profiler.py  red_flags.py
src/academic_investigator/modes/: __init__.py  conference.py  lab.py  organization.py  researcher.py
src/academic_investigator/reporting/: __init__.py  formatters.py  lang.py  templates.py
tests/: conftest.py  test_cli.py  test_formatters.py  test_impact_tiers.py  test_lang.py  test_modes.py  test_openalex.py  test_person_profiler.py  test_red_flags.py
